--- a/manuscripts/24-jb-church-wb-LONG/24-church-wb-long.qmd
+++ b/manuscripts/24-jb-church-wb-LONG/24-church-wb-long.qmd
@@ -23,7 +23,7 @@ author:
   - name: Geoffrey Troughton
     affiliation: School of Social and Cultural Studies, Victoria University of Wellington
     orcid: 0000-0001-7423-0640
-  - name: Daryl Van Tongeren
+  - name: Daryl R. Van Tongeren
     affiliation: Hope College
     orcid: 0000-0002-1810-9448
   - name: Chris G. Sibley
@@ -163,6 +163,7 @@ var_labels_baseline <- c(
   "nz_dep2018" = "NZ Deprevation Index 2018",
   "nzsei_13_l" = "NZSEI (Occupational Prestige Index)",
   "parent_binary" = "Parent (binary)",
+  "partner_binary" = "Partner (binary)",
   "rwa" = "Right Wing Authoritarianism",
   "sample_frame_opt_in_binary" = "Sample Frame Opt-In (binary)",
   "sdo" = "Social Dominance Orientation",
@@ -220,7 +221,7 @@ label_mapping_raw_social <- list(
 )
 
 
-label_mappings <- list(
+label_mappings_all <- list(
   baseline = var_labels_baseline,
   exposure = label_mapping_raw_exposure,
   health = label_mapping_raw_health,
@@ -229,7 +230,7 @@ label_mappings <- list(
   life = label_mapping_raw_life,
   social = label_mapping_raw_social
 )
-
+label_mappings_all
 
 all_outcomes <- list(
   health = raw_outcomes_health,
@@ -238,13 +239,14 @@ all_outcomes <- list(
   life_focused = raw_outcomes_life,
   social = raw_outcomes_social
 )
-
-appendix_text_version_1 <- boilerplate::boilerplate_measures(
+all_outcomes
+baseline_vars
+appendix_text_version_1 <- boilerplate_measures(
   baseline_vars = baseline_vars,
   exposure_var = raw_exposure_vars,
   outcome_vars = all_outcomes,
   measure_data = measures_data,
-  label_mappings = label_mappings
+  label_mappings = label_mappings_all
   )
 
 cat(appendix_text_version_1)
@@ -364,7 +366,7 @@ label_mapping_social <- list(
 
 
 # plot options ------------------------------------------------------------
-nice_exposure_name <- glue::glue("Monthly Religious Service")
+nice_exposure_name <- glue::glue("Monthly Religious Service Rates")
 title <- glue::glue("Causal Effects of {nice_exposure_name} on Multi-Dimensional Well-Being")
 
 
@@ -504,7 +506,7 @@ percent_missing_baseline <- here_read("percent_missing_baseline")
 
 ## Introduction
 
-Collective religious activity is a cornerstone of many cultures, and questions about whether attending religious services affects well-being are long-standing [@koenig2012handbook]. Within religious traditions, the belief that religious practices benefit adherents permeates theology, moral teaching, and community life, from Buddhism's emphasis on meditation as a path to enlightenment and reduced suffering to Christianity's view of prayer and worship as a means of spiritual growth and divine connection, to Indigenous spiritual practices that are seen as maintaining harmony between people, nature, and the sacred. More recently, empirical science has linked religious service attendance with multiple dimensions of well-being, including social integration, life satisfaction, mental health, and meaning-making [@vanderweele2022invited_church; @chen2020religious; @dunbar2021religiosity; @highland2022national]. These studies have demonstrated that, on average, individuals who attend services report more favourable social and psychological outcomes.
+Collective religious activity is a cornerstone of many cultures, and questions about whether attending religious services affects well-being are long-standing [@koenig2012handbook]. Within religious traditions, the belief that religious practices benefit adherents permeates theology, moral teaching, and community life, from Buddhism's emphasis on meditation as a path to enlightenment and reduced suffering to Christianity's view of prayer and worship as a means of spiritual growth and divine connection, to Indigenous spiritual practices that are seen as maintaining harmony between people, nature, and the sacred. More recently, empirical science has linked religious service attendance with multiple dimensions of well-being, including social integration, life satisfaction, mental health, and meaning-making [@vanderweele2022invited_church; @chen2020religious; @dunbar2021religiosity; @highland2022national]. These studies have demonstrated that, on average, individuals who attend services report more favourable social and psychological outcomes. Is this association causal?  For whom, and in which respects? 
 
 Although several studies have applied rigorous causal methods [@pawlikowski2019religious; @vanderweele2021effectsReligiousServiceMetanalysis; @vanderweele2020vchenrespond; @vanderweelechurchmortality], debates over causality persist [@highland2019attitudes]. Many investigations do not fully adjust for baseline health or baseline religious service attendance, nor other critical confounders affecting both religious participation and well-being [@brown2023_church; @jokela2024_church]. For instance, in their analysis of four U.S. cohort studies (N=6,592), Jokela and Laakasuo found that poorer health trajectories preceded religious disengagement, suggesting that declining practice might reflect underlying health problems rather than cause them. Similarly, Iyer and Rosso's global data ($N=65,564$) show that frequent attenders report about five per cent higher life satisfaction than infrequent attenders, though unmeasured confounding or reverse causation could explain this association.
 
@@ -796,7 +798,10 @@ We also observe a positive causal association between regular attendance and gra
 
 We also find that religious attendance is causally associated with modest improvements in sexual satisfaction. Earlier cross-sectional studies have observed correlations between religiosity and marital sexual satisfaction [@dew2020joint]. Although these studies do reliably estimate causal magnitudes, our results suggest a genuine but modest causal effect. Again, our purposes here are descriptive, and we do not evaluate specific theories. Speculating, religious service might align values, enhance communication, and foster stable social support networks within couples, thereby strengthening intimacy and trust and reduce conflict. From a bio-functional perspective, such intimacy and trust would be especially valuable for parenting -- the "ultimate cooperation problem" that links biological fates [@Bulbulia_2015].  On the other hand, a darker side to such cooperation might be sexual inequality [@deak2021individuals]. Again, our findings should not be considered as offering life advice. However, our findings motivate future investigation within the emerging field of religion, biological sex, and parenting (refer to @shaver2020church; @shaver2024religious; @shaver2022integrating). We contribute to these horizons by observing that in contemporary New Zealand, the relationship between religious attendance and sexual satisfaction is likely causal. 
 
-In summary, our findings show that religious service attendance can enrich certain facets of well-being, especially meaning, gratitude, sexual satisfaction, and a sense of purpose. We find, at best, only limited evidence for broader effects on other domains. Future research should consider different populations and subgroups within New Zealand and examine proximate and evolutionary mechanisms by which religious service affects well-being. As with all causal investigations, we should also remain mindful that a practice that benefits certain groups, on average, may not benefit every individual similarly. We recommend care when imparting individual advice.
+
+Finally, we observe small but detectable effects on certain health behaviours. Specifically, regular attendance slightly reduced hours of exercise. This finding is consistent with a lost-opportunity explanation, whereby time spent at religious services replaces other physical activities. We observed a modest negative effect on BMI, suggesting that religious engagement might offset this reduced exercise through dietary practices or social norms around body weight, although this is speculative and mechanisms await further investigation. These smaller estimates illustrate how religious involvement can reallocate time and attention in ways that shape diverse health outcomes, even if the overall patterns are more modest than those observed for meaning, gratitude, sexual satisfaction, and a sense of purpose
+
+In summary, our findings show that religious service attendance can enrich certain facets of well-being, especially meaning, gratitude, sexual satisfaction, and a sense of purpose. We find only limited evidence for broader effects on other domains. Future research might consider different populations and subgroups within New Zealand and examine proximate and evolutionary mechanisms by which religious service affects well-being. As with all causal investigations, we should also remain mindful that a practice that benefits certain groups, on average, may not benefit every individual similarly. We recommend care when imparting individual advice.
 
 ### Ethics
 
@@ -805,7 +810,7 @@ The University of Auckland Human Participants Ethics Committee reviews the NZAVS
 
 ### Data Availability
 
-The data described in the paper are part of the New Zealand Attitudes and Values Study. Members of the NZAVS management team and research group hold full copies of the NZAVS data. A de-identified dataset containing only the variables analysed in this manuscript is available upon request from the corresponding author or any member of the NZAVS advisory board for replication or checking of any published study using NZAVS data. The code for the analysis can be found at [OSF link](https://osf.io/wgtz4/). 
+The data described in the paper are part of the New Zealand Attitudes and Values Study. Members of the NZAVS management team and research group hold full copies of the NZAVS data. A de-identified dataset containing only the variables analysed in this manuscript is available upon request from the corresponding author or any member of the NZAVS advisory board for replication or checking of any published study using NZAVS data. The code for the analysis can be found at [OSF link](https://osf.io/ab7cx/). 
 
 
 ### Acknowledgements
