--- a/manuscripts/24-jb-church-wb-LONG/24-church-wb-long.tex
+++ b/manuscripts/24-jb-church-wb-LONG/24-church-wb-long.tex
@@ -192,7 +192,7 @@
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
   pdftitle={Religious Service Attendance Increases Meaning, Gratitude, and Sexual Satisfaction (But Not Much Else) in Secular New Zealand},
-  pdfauthor={Joseph A. Bulbulia; Don E Davis; Cyrstal Park; Kenneth G. Rice; Geoffrey Troughton; Daryl Van Tongeren; Chris G. Sibley},
+  pdfauthor={Joseph A. Bulbulia; Don E Davis; Cyrstal Park; Kenneth G. Rice; Geoffrey Troughton; Daryl R. Van Tongeren; Chris G. Sibley},
   pdfkeywords={Use, use},
   colorlinks=true,
   linkcolor={blue},
@@ -252,7 +252,7 @@ University of Wellington
       \usepackage{academicons}
 \usepackage{xcolor}
 
-  \author{Daryl Van Tongeren}
+  \author{Daryl R. Van Tongeren}
             \affil{%
              \small{     Hope College
           ORCID \textcolor[HTML]{A6CE39}{\aiOrcid} ~0000-0002-1810-9448 }
@@ -268,7 +268,7 @@ University of Wellington
       
 
 
-\date{2024-12-23}
+\date{2024-12-24}
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -1149,16 +1149,29 @@ these horizons by observing that in contemporary New Zealand, the
 relationship between religious attendance and sexual satisfaction is
 likely causal.
 
+Finally, we observe small but detectable effects on certain health
+behaviours. Specifically, regular attendance slightly reduced hours of
+exercise. This finding is consistent with a lost-opportunity
+explanation, whereby time spent at religious services replaces other
+physical activities. We observed a modest negative effect on BMI,
+suggesting that religious engagement might offset this reduced exercise
+through dietary practices or social norms around body weight, although
+this is speculative and mechanisms await further investigation. These
+smaller estimates illustrate how religious involvement can reallocate
+time and attention in ways that shape diverse health outcomes, even if
+the overall patterns are more modest than those observed for meaning,
+gratitude, sexual satisfaction, and a sense of purpose
+
 In summary, our findings show that religious service attendance can
 enrich certain facets of well-being, especially meaning, gratitude,
-sexual satisfaction, and a sense of purpose. We find, at best, only
-limited evidence for broader effects on other domains. Future research
-should consider different populations and subgroups within New Zealand
-and examine proximate and evolutionary mechanisms by which religious
-service affects well-being. As with all causal investigations, we should
-also remain mindful that a practice that benefits certain groups, on
-average, may not benefit every individual similarly. We recommend care
-when imparting individual advice.
+sexual satisfaction, and a sense of purpose. We find only limited
+evidence for broader effects on other domains. Future research might
+consider different populations and subgroups within New Zealand and
+examine proximate and evolutionary mechanisms by which religious service
+affects well-being. As with all causal investigations, we should also
+remain mindful that a practice that benefits certain groups, on average,
+may not benefit every individual similarly. We recommend care when
+imparting individual advice.
 
 \subsubsection{Ethics}\label{ethics}
 
@@ -1177,7 +1190,7 @@ containing only the variables analysed in this manuscript is available
 upon request from the corresponding author or any member of the NZAVS
 advisory board for replication or checking of any published study using
 NZAVS data. The code for the analysis can be found at
-\href{https://osf.io/wgtz4/}{OSF link}.
+\href{https://osf.io/ab7cx/}{OSF link}.
 
 \subsubsection{Acknowledgements}\label{acknowledgements}
 
@@ -1291,11 +1304,9 @@ Accurate). The second item was reversely coded.
 
 \paragraph{Born in NZ}\label{born-in-nz}
 
-**
+\emph{Where were you born? (please be specific, e.g., which town/city?)}
 
-We asked participants, ``Which country were you born in?'' or ``Where
-were you born? (please be specific, e.g., which town/city?)'' (waves:
-6-15). Developed for the NZAVS.
+Coded binary (1 = New Zealand; 0 = elsewhere.) Developed for the NZAVS.
 
 \paragraph{Conscientiousness}\label{conscientiousness}
 
@@ -1361,7 +1372,8 @@ to a lot of different people at parties.
 
 \paragraph{Hlth Disability Binary}\label{hlth-disability-binary}
 
-**
+\emph{Do you have a health condition or disability that limits you and
+that has lasted for 6+ months?}
 
 We assessed disability with a one-item indicator adapted from Verbrugge
 (1997). It asks, ``Do you have a health condition or disability that
@@ -1425,14 +1437,11 @@ We took the natural log of the response + 1. Developed for the NZAVS.
 
 \paragraph{Male (binary)}\label{male-binary}
 
-**
+\emph{We asked participants' gender in an open-ended question: ``what is
+your gender?''}
 
-We asked participants' gender in an open-ended question: ``what is your
-gender?'' or ``Are you male or female?'' (waves: 1-5). Female was coded
-as 0, Male was coded as 1, and gender diverse coded as 3 (Fraser et al.,
-2020). (or 0.5 = neither female nor male). Here, we coded all those who
-responded as Male as 1, and those who did not as 0.
-(\citeproc{ref-fraser_coding_2020}{Fraser \emph{et al.} 2020})
+Here, we coded all those who responded as Male as 1, and those who did
+not as 0. (\citeproc{ref-fraser_coding_2020}{Fraser \emph{et al.} 2020})
 
 \paragraph{Neuroticism}\label{neuroticism}
 
@@ -1471,16 +1480,15 @@ Numerical: (1-10) (\citeproc{ref-atkinson2019}{Atkinson \emph{et al.}
 \paragraph{NZSEI (Occupational Prestige
 Index)}\label{nzsei-occupational-prestige-index}
 
-**
+\emph{We assessed occupational prestige and status using the New Zealand
+Socio-economic Index 13 (NZSEI-13).}
 
-We assessed occupational prestige and status using the New Zealand
-Socio-economic Index 13 (NZSEI-13) (Fahy et al., 2017). This index uses
-the income, age, and education of a reference group, in this case, the
-2013 New Zealand census, to calculate a score for each occupational
-group. Scores range from 10 (Lowest) to 90 (Highest). This list of index
-scores for occupational groups was used to assign each participant a
-NZSEI-13 score based on their occupation. (\citeproc{ref-fahy2017}{Fahy
-\emph{et al.} 2017})
+This index uses the income, age, and education of a reference group, in
+this case, the 2013 New Zealand census, to calculate a score for each
+occupational group. Scores range from 10 (Lowest) to 90 (Highest). This
+list of index scores for occupational groups was used to assign each
+participant a NZSEI-13 score based on their occupation.
+(\citeproc{ref-fahy2017}{Fahy \emph{et al.} 2017})
 
 \paragraph{Openness}\label{openness}
 
@@ -1504,14 +1512,12 @@ abstract ideas. (r) (\citeproc{ref-sibley2011}{Sibley \emph{et al.}
 
 \paragraph{Parent (binary)}\label{parent-binary}
 
-**
+\emph{If you are a parent, in which year was your eldest child born?}
 
-We asked participants, ``If you are a parent, what is the birth date of
-your eldest child?'' or ``If you are a parent, in which year was your
-eldest child born?'' (waves: 10-current). Parents were coded as 1, while
-the others were coded as 0. Developed for the NZAVS.
+Parents were coded as 1, while the others were coded as 0. Developed for
+the NZAVS.
 
-\paragraph{Partner Binary}\label{partner-binary}
+\paragraph{Partner (binary)}\label{partner-binary}
 
 \emph{What is your relationship status? (e.g., single, married,
 de-facto, civil union, widowed, living together, etc.)}
